--- a/coffee-shop/src/main/resources/application.properties
+++ b/coffee-shop/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://coffee-shop-db:5432/postgres
-#%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 #%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=load-data.sql
 
 barista.url=http://barista:8080/processes
-#%dev.barista.url=http://localhost:8002/processes
+%dev.barista.url=http://localhost:8002/processes
 #%test.barista.url=http://localhost:8002/processes
 
 version=1.2.3
